--- a/shared/i18n/locales/zh_TW/translation.json
+++ b/shared/i18n/locales/zh_TW/translation.json
@@ -294,9 +294,10 @@
   "{{userName}} published": "{{userName}} 已將其發布",
   "{{userName}} unpublished": "{{userName}} 已取消將其發布",
   "{{userName}} moved": "{{userName}} 將其移動",
-  "Export started": "已經開始匯出",
   "Your file will be available in {{ location }} soon": "您的文件將很快將出現在 {{ location }} 中",
   "View": "檢視",
+  "A link to your file will be sent through email soon": "A link to your file will be sent through email soon",
+  "Export started": "已經開始匯出",
   "A ZIP file containing the images, and documents in the Markdown format.": "包含圖片和 Markdown 格式文件的 ZIP 文件。",
   "A ZIP file containing the images, and documents as HTML files.": "包含圖片和 HTML 格式文件的 ZIP 文件。",
   "Structured data that can be used to transfer data to another compatible {{ appName }} instance.": "可用於將資料傳輸到另一個相容的 {{ appName }} 實例的結構化資料。",
@@ -896,6 +897,7 @@
   "Triggers": "觸發器",
   "Mention users and more": "Mention users and more",
   "Insert block": "插入區塊",
+  "Continue with Passkey": "Continue with Passkey",
   "Sign In": "登入",
   "Continue with Email": "使用電子郵件以繼續",
   "Continue with {{ authProviderName }}": "使用 {{ authProviderName }} 以繼續",
@@ -1027,8 +1029,11 @@
   "Connect": "連結",
   "Allow members to sign-in using their email address": "允許成員使用他們的電子郵件地址登入",
   "The server must have SMTP configured to enable this setting": "伺服器必須有已組態的 SMTP 才能啟用此設定",
+  "Passkeys": "Passkeys",
+  "Allow members to sign-in with a WebAuthn passkey": "Allow members to sign-in with a WebAuthn passkey",
   "Restrictions": "Restrictions",
   "by {{ name }}": "来自 {{ name }}",
+  "Expired": "已逾時",
   "Last used": "最近使用",
   "No expiry": "永久有效",
   "Restricted scope": "範圍受限",
@@ -1055,7 +1060,6 @@
   "Failed to export members": "Failed to export members",
   "Download CSV": "Download CSV",
   "Processing": "正在處理",
-  "Expired": "已逾時",
   "Completed": "已完成",
   "Failed": "失敗",
   "All collections": "所有的文件集",
@@ -1236,6 +1240,7 @@
   "Require members to be invited to the workspace before they can create an account using SSO.": "成員必須先受邀加入工作區，才能使用 SSO 建立帳號。",
   "Default role": "預設角色",
   "The default user role for new accounts. Changing this setting does not affect existing user accounts.": "預設角色設定只會套用到新的使用者帳號。改變此設定並不會影響現有使用者帳號。",
+  "Allow users to sign in with passkeys for passwordless authentication": "Allow users to sign in with passkeys for passwordless authentication",
   "When enabled, documents can be shared publicly on the internet by any member of the workspace": "啟用後，工作區中的任何成員都可以在網際網絡上公開共享工作區中的文件",
   "Viewer document exports": "檢視者可匯出文件",
   "When enabled, viewers can see download options for documents": "啓用時，檢視者可以看到文件的下載選項",
@@ -1374,6 +1379,27 @@
   "An ID that uniquely identifies the website in your Matomo instance.": "An ID that uniquely identifies the website in your Matomo instance.",
   "Whoops, you need to accept the permissions in Notion to connect {{ appName }} to your workspace. Try again?": "Whoops, you need to accept the permissions in Notion to connect {{ appName }} to your workspace. Try again?",
   "Import pages from Notion": "從 Notion 匯入文件",
+  "Passkey options": "Passkey options",
+  "Registered {{ timeAgo }}": "Registered {{ timeAgo }}",
+  "Passkey updated": "Passkey updated",
+  "Failed to update passkey. Please try again.": "Failed to update passkey. Please try again.",
+  "Give your passkey a memorable name to easily identify it.": "Give your passkey a memorable name to easily identify it.",
+  "Enter passkey name": "Enter passkey name",
+  "Failed to load passkeys": "Failed to load passkeys",
+  "Passkey added successfully": "Passkey added successfully",
+  "Failed to register passkey. Please try again.": "Failed to register passkey. Please try again.",
+  "Rename passkey": "Rename passkey",
+  "Delete passkey": "Delete passkey",
+  "Passkey deleted successfully": "Passkey deleted successfully",
+  "Failed to delete passkey. Please try again.": "Failed to delete passkey. Please try again.",
+  "Are you sure you want to delete this passkey? You will no longer be able to use it to sign in.": "Are you sure you want to delete this passkey? You will no longer be able to use it to sign in.",
+  "Registering": "Registering",
+  "Add Passkey": "Add Passkey",
+  "Passkeys allow you to sign in safely without a password using your device's biometric authentication (Face ID, Touch ID, Windows Hello) or security key.": "Passkeys allow you to sign in safely without a password using your device's biometric authentication (Face ID, Touch ID, Windows Hello) or security key.",
+  "Sign-in with Passkey is currently disabled for this team.": "Sign-in with Passkey is currently disabled for this team.",
+  "Enable for all users in Settings -> Authentication.": "Enable for all users in Settings -> Authentication.",
+  "Contact a workspace admin to enable it.": "Contact a workspace admin to enable it.",
+  "You don't have any passkeys yet.": "You don't have any passkeys yet.",
   "Add to Slack": "新增到 Slack",
   "document published": "已發佈文件",
   "document updated": "已更新文件",
