--- a/shared/i18n/locales/pt_BR/translation.json
+++ b/shared/i18n/locales/pt_BR/translation.json
@@ -294,9 +294,10 @@
   "{{userName}} published": "{{userName}} publicou",
   "{{userName}} unpublished": "{{userName}} despublicou",
   "{{userName}} moved": "{{userName}} moveu",
-  "Export started": "Exportação iniciada",
   "Your file will be available in {{ location }} soon": "Seu arquivo estará disponível em {{ location }} em breve",
   "View": "Visualizar",
+  "A link to your file will be sent through email soon": "A link to your file will be sent through email soon",
+  "Export started": "Exportação iniciada",
   "A ZIP file containing the images, and documents in the Markdown format.": "Um arquivo ZIP contendo as imagens e documentos no formato Markdown.",
   "A ZIP file containing the images, and documents as HTML files.": "Um arquivo ZIP contendo as imagens e documentos no formato HTML.",
   "Structured data that can be used to transfer data to another compatible {{ appName }} instance.": "Dados estruturados que podem ser usados para transferir dados para outra instância {{ appName }} compatível.",
@@ -896,6 +897,7 @@
   "Triggers": "Gatilhos",
   "Mention users and more": "Mencionar usuários e mais",
   "Insert block": "Inserir bloco",
+  "Continue with Passkey": "Continue with Passkey",
   "Sign In": "Entrar",
   "Continue with Email": "Continuar com E-mail",
   "Continue with {{ authProviderName }}": "Continuar com {{ authProviderName }}",
@@ -1027,8 +1029,11 @@
   "Connect": "Conectar",
   "Allow members to sign-in using their email address": "Permitir que membros façam login usando endereço de e-mail",
   "The server must have SMTP configured to enable this setting": "O servidor deve ter o SMTP configurado para habilitar esta configuração",
+  "Passkeys": "Passkeys",
+  "Allow members to sign-in with a WebAuthn passkey": "Allow members to sign-in with a WebAuthn passkey",
   "Restrictions": "Restrictions",
   "by {{ name }}": "por {{ name }}",
+  "Expired": "Expirado",
   "Last used": "Última utilização",
   "No expiry": "Não expira",
   "Restricted scope": "Escopo restrito",
@@ -1055,7 +1060,6 @@
   "Failed to export members": "Failed to export members",
   "Download CSV": "Download CSV",
   "Processing": "Processando",
-  "Expired": "Expirado",
   "Completed": "Concluído",
   "Failed": "Falha",
   "All collections": "Todas coleções",
@@ -1236,6 +1240,7 @@
   "Require members to be invited to the workspace before they can create an account using SSO.": "Exigir que os membros sejam convidados para o espaço de trabalho antes de criarem uma conta utilizando SSO.",
   "Default role": "Função padrão",
   "The default user role for new accounts. Changing this setting does not affect existing user accounts.": "A função de usuário padrão para novas contas. A alteração desta configuração não afeta as contas de usuário existentes.",
+  "Allow users to sign in with passkeys for passwordless authentication": "Allow users to sign in with passkeys for passwordless authentication",
   "When enabled, documents can be shared publicly on the internet by any member of the workspace": "Quando habilitado, os documentos podem ser compartilhados publicamente na internet por qualquer membro do espaço de trabalho",
   "Viewer document exports": "Permitir visualizadores realizar exportação de documentos",
   "When enabled, viewers can see download options for documents": "Quando ativado, os visualizadores podem ver opções de download de documentos",
@@ -1374,6 +1379,27 @@
   "An ID that uniquely identifies the website in your Matomo instance.": "Um ID que identifica unicamente o site na sua instância Matomo.",
   "Whoops, you need to accept the permissions in Notion to connect {{ appName }} to your workspace. Try again?": "Ops, você precisa aceitar as permissões no Notion para conectar {{ appName }} ao seu espaço de trabalho. Tentar novamente?",
   "Import pages from Notion": "Importar páginas do Notion",
+  "Passkey options": "Passkey options",
+  "Registered {{ timeAgo }}": "Registered {{ timeAgo }}",
+  "Passkey updated": "Passkey updated",
+  "Failed to update passkey. Please try again.": "Failed to update passkey. Please try again.",
+  "Give your passkey a memorable name to easily identify it.": "Give your passkey a memorable name to easily identify it.",
+  "Enter passkey name": "Enter passkey name",
+  "Failed to load passkeys": "Failed to load passkeys",
+  "Passkey added successfully": "Passkey added successfully",
+  "Failed to register passkey. Please try again.": "Failed to register passkey. Please try again.",
+  "Rename passkey": "Rename passkey",
+  "Delete passkey": "Delete passkey",
+  "Passkey deleted successfully": "Passkey deleted successfully",
+  "Failed to delete passkey. Please try again.": "Failed to delete passkey. Please try again.",
+  "Are you sure you want to delete this passkey? You will no longer be able to use it to sign in.": "Are you sure you want to delete this passkey? You will no longer be able to use it to sign in.",
+  "Registering": "Registering",
+  "Add Passkey": "Add Passkey",
+  "Passkeys allow you to sign in safely without a password using your device's biometric authentication (Face ID, Touch ID, Windows Hello) or security key.": "Passkeys allow you to sign in safely without a password using your device's biometric authentication (Face ID, Touch ID, Windows Hello) or security key.",
+  "Sign-in with Passkey is currently disabled for this team.": "Sign-in with Passkey is currently disabled for this team.",
+  "Enable for all users in Settings -> Authentication.": "Enable for all users in Settings -> Authentication.",
+  "Contact a workspace admin to enable it.": "Contact a workspace admin to enable it.",
+  "You don't have any passkeys yet.": "You don't have any passkeys yet.",
   "Add to Slack": "Adicionar ao Slack",
   "document published": "documento publicado",
   "document updated": "documento atualizado",
