--- a/shared/i18n/locales/fa_IR/translation.json
+++ b/shared/i18n/locales/fa_IR/translation.json
@@ -294,9 +294,10 @@
   "{{userName}} published": "{{userName}} منتشر شد",
   "{{userName}} unpublished": "{{userName}} منتشر نشده",
   "{{userName}} moved": "{{userName}} منتقل شد",
-  "Export started": "فرآیند خروجی گرفتن آغاز شد",
   "Your file will be available in {{ location }} soon": "فایل شما به زودی در {{ location }} دردسترس خواهد بود",
   "View": "مشاهده",
+  "A link to your file will be sent through email soon": "A link to your file will be sent through email soon",
+  "Export started": "فرآیند خروجی گرفتن آغاز شد",
   "A ZIP file containing the images, and documents in the Markdown format.": "فایلی ZIP شامل تصاویر و اسناد به فرمت Markdown",
   "A ZIP file containing the images, and documents as HTML files.": "فایلی ZIP شامل تصاویر و اسناد به فرمت HTML",
   "Structured data that can be used to transfer data to another compatible {{ appName }} instance.": "داده‌های ساختاریافته که می‌توان برای انتقال به یک نمونه سازگار دیگر از {{ appName }} استفاده کرد",
@@ -896,6 +897,7 @@
   "Triggers": "محرک‌ها",
   "Mention users and more": "منشن کاربران و بیشتر",
   "Insert block": "افزودن بلوک",
+  "Continue with Passkey": "Continue with Passkey",
   "Sign In": "ورود",
   "Continue with Email": "ادامه با ایمیل",
   "Continue with {{ authProviderName }}": "با {{ authProviderName }} ادامه دهید",
@@ -1027,8 +1029,11 @@
   "Connect": "اتصال",
   "Allow members to sign-in using their email address": "اجازه به اعضا برای ورود با استفاده از آدرس ایمیل خود",
   "The server must have SMTP configured to enable this setting": "برای استفاده از این تنظیمات، سرور باید تنظیمات SMTP را داشته باشد",
+  "Passkeys": "Passkeys",
+  "Allow members to sign-in with a WebAuthn passkey": "Allow members to sign-in with a WebAuthn passkey",
   "Restrictions": "Restrictions",
   "by {{ name }}": "توسط {{ name }}",
+  "Expired": "منقضی شده",
   "Last used": "آخرین بار استفاده شده",
   "No expiry": "بدون انقضا",
   "Restricted scope": "دامنه محدود",
@@ -1055,7 +1060,6 @@
   "Failed to export members": "Failed to export members",
   "Download CSV": "Download CSV",
   "Processing": "در حال پردازش",
-  "Expired": "منقضی شده",
   "Completed": "تکمیل شد",
   "Failed": "ناموفق",
   "All collections": "همه مجموعه ها",
@@ -1236,6 +1240,7 @@
   "Require members to be invited to the workspace before they can create an account using SSO.": "الزام اعضا به دعوت شدن به فضای کاری قبل از اینکه بتوانند با استفاده از SSO یک حساب کاربری ایجاد کنند.",
   "Default role": "نقش پیش‌فرض",
   "The default user role for new accounts. Changing this setting does not affect existing user accounts.": "نقش پیش‌فرض کاربر برای حساب‌های جدید. تغییر این تنظیمات بر حساب‌های کاربری موجود تأثیری نخواهد داشت.",
+  "Allow users to sign in with passkeys for passwordless authentication": "Allow users to sign in with passkeys for passwordless authentication",
   "When enabled, documents can be shared publicly on the internet by any member of the workspace": "هنگامی که فعال باشد، هر عضو فضای کاری می‌تواند اسناد را به صورت عمومی در اینترنت به اشتراک بگذارد.",
   "Viewer document exports": "خروجی ها اسناد برای مشاهده‌گران",
   "When enabled, viewers can see download options for documents": "هنگامی که فعال باشد، مشاهده‌گران می‌توانند گزینه‌های دانلود برای اسناد را ببینند.",
@@ -1374,6 +1379,27 @@
   "An ID that uniquely identifies the website in your Matomo instance.": "شناسه‌ای که سایت را در نمونه Matomo شما به‌صورت یکتا شناسایی می‌کند.",
   "Whoops, you need to accept the permissions in Notion to connect {{ appName }} to your workspace. Try again?": "اوه! برای اتصال {{appName}} به فضای کاری خود، باید دسترسی‌های Notion را تأیید کنید. دوباره تلاش کنید؟",
   "Import pages from Notion": "ایمپورت اسناد از Notion",
+  "Passkey options": "Passkey options",
+  "Registered {{ timeAgo }}": "Registered {{ timeAgo }}",
+  "Passkey updated": "Passkey updated",
+  "Failed to update passkey. Please try again.": "Failed to update passkey. Please try again.",
+  "Give your passkey a memorable name to easily identify it.": "Give your passkey a memorable name to easily identify it.",
+  "Enter passkey name": "Enter passkey name",
+  "Failed to load passkeys": "Failed to load passkeys",
+  "Passkey added successfully": "Passkey added successfully",
+  "Failed to register passkey. Please try again.": "Failed to register passkey. Please try again.",
+  "Rename passkey": "Rename passkey",
+  "Delete passkey": "Delete passkey",
+  "Passkey deleted successfully": "Passkey deleted successfully",
+  "Failed to delete passkey. Please try again.": "Failed to delete passkey. Please try again.",
+  "Are you sure you want to delete this passkey? You will no longer be able to use it to sign in.": "Are you sure you want to delete this passkey? You will no longer be able to use it to sign in.",
+  "Registering": "Registering",
+  "Add Passkey": "Add Passkey",
+  "Passkeys allow you to sign in safely without a password using your device's biometric authentication (Face ID, Touch ID, Windows Hello) or security key.": "Passkeys allow you to sign in safely without a password using your device's biometric authentication (Face ID, Touch ID, Windows Hello) or security key.",
+  "Sign-in with Passkey is currently disabled for this team.": "Sign-in with Passkey is currently disabled for this team.",
+  "Enable for all users in Settings -> Authentication.": "Enable for all users in Settings -> Authentication.",
+  "Contact a workspace admin to enable it.": "Contact a workspace admin to enable it.",
+  "You don't have any passkeys yet.": "You don't have any passkeys yet.",
   "Add to Slack": "افزودن به Slack",
   "document published": "سند منتشر شد",
   "document updated": "سند به روز شد",
