--- a/shared/i18n/locales/nb_NO/translation.json
+++ b/shared/i18n/locales/nb_NO/translation.json
@@ -294,9 +294,10 @@
   "{{userName}} published": "{{userName}} publiserte",
   "{{userName}} unpublished": "{{userName}} avpubliserte",
   "{{userName}} moved": "{{userName}} flyttet",
-  "Export started": "Eksport startet",
   "Your file will be available in {{ location }} soon": "Filen din vil snart være tilgjengelig i {{ location }}",
   "View": "Vis",
+  "A link to your file will be sent through email soon": "A link to your file will be sent through email soon",
+  "Export started": "Eksport startet",
   "A ZIP file containing the images, and documents in the Markdown format.": "En ZIP-fil som inneholder bildene og dokumentene i Markdown-formatet.",
   "A ZIP file containing the images, and documents as HTML files.": "En ZIP-fil som inneholder bildene og dokumentene som HTML-filer.",
   "Structured data that can be used to transfer data to another compatible {{ appName }} instance.": "Strukturerte data som kan brukes til å overføre data til en annen kompatibel {{ appName }}-instans.",
@@ -896,6 +897,7 @@
   "Triggers": "Utløsere",
   "Mention users and more": "Nevn brukere og mer",
   "Insert block": "Sett inn blokk",
+  "Continue with Passkey": "Continue with Passkey",
   "Sign In": "Logg inn",
   "Continue with Email": "Fortsett med e-post",
   "Continue with {{ authProviderName }}": "Fortsett med {{ authProviderName }}",
@@ -1027,8 +1029,11 @@
   "Connect": "Koble til",
   "Allow members to sign-in using their email address": "Tillat medlemmer å logge inn med sin e-postadresse",
   "The server must have SMTP configured to enable this setting": "Serveren må ha SMTP konfigurert for å aktivere denne innstillingen",
+  "Passkeys": "Passkeys",
+  "Allow members to sign-in with a WebAuthn passkey": "Allow members to sign-in with a WebAuthn passkey",
   "Restrictions": "Restrictions",
   "by {{ name }}": "av {{ name }}",
+  "Expired": "Utløpt",
   "Last used": "Sist brukt",
   "No expiry": "Ingen utløpsdato",
   "Restricted scope": "Begrenset scope",
@@ -1055,7 +1060,6 @@
   "Failed to export members": "Failed to export members",
   "Download CSV": "Download CSV",
   "Processing": "Behandler",
-  "Expired": "Utløpt",
   "Completed": "Fullført",
   "Failed": "Mislyktes",
   "All collections": "Alle samlinger",
@@ -1236,6 +1240,7 @@
   "Require members to be invited to the workspace before they can create an account using SSO.": "Krev at medlemmer blir invitert til arbeidsområdet før de kan opprette en konto ved bruk av SSO.",
   "Default role": "Standardrolle",
   "The default user role for new accounts. Changing this setting does not affect existing user accounts.": "Standardbrukerrollen for nye kontoer. Endring av denne innstillingen påvirker ikke eksisterende brukerkontoer.",
+  "Allow users to sign in with passkeys for passwordless authentication": "Allow users to sign in with passkeys for passwordless authentication",
   "When enabled, documents can be shared publicly on the internet by any member of the workspace": "Når aktivert, kan dokumenter deles offentlig på internett av ethvert medlem av arbeidsområdet",
   "Viewer document exports": "Eksport av dokumentvisning",
   "When enabled, viewers can see download options for documents": "Når aktivert, kan seere se nedlastingsalternativer for dokumenter",
@@ -1374,6 +1379,27 @@
   "An ID that uniquely identifies the website in your Matomo instance.": "En ID som unikt identifiserer nettstedet i din Matomo-forekomst.",
   "Whoops, you need to accept the permissions in Notion to connect {{ appName }} to your workspace. Try again?": "Oisann, du må akseptere tillatelsene i Notion for å koble til {{ appName }} til ditt arbeidsområde. Prøv igjen?",
   "Import pages from Notion": "Importer sider fra Notion",
+  "Passkey options": "Passkey options",
+  "Registered {{ timeAgo }}": "Registered {{ timeAgo }}",
+  "Passkey updated": "Passkey updated",
+  "Failed to update passkey. Please try again.": "Failed to update passkey. Please try again.",
+  "Give your passkey a memorable name to easily identify it.": "Give your passkey a memorable name to easily identify it.",
+  "Enter passkey name": "Enter passkey name",
+  "Failed to load passkeys": "Failed to load passkeys",
+  "Passkey added successfully": "Passkey added successfully",
+  "Failed to register passkey. Please try again.": "Failed to register passkey. Please try again.",
+  "Rename passkey": "Rename passkey",
+  "Delete passkey": "Delete passkey",
+  "Passkey deleted successfully": "Passkey deleted successfully",
+  "Failed to delete passkey. Please try again.": "Failed to delete passkey. Please try again.",
+  "Are you sure you want to delete this passkey? You will no longer be able to use it to sign in.": "Are you sure you want to delete this passkey? You will no longer be able to use it to sign in.",
+  "Registering": "Registering",
+  "Add Passkey": "Add Passkey",
+  "Passkeys allow you to sign in safely without a password using your device's biometric authentication (Face ID, Touch ID, Windows Hello) or security key.": "Passkeys allow you to sign in safely without a password using your device's biometric authentication (Face ID, Touch ID, Windows Hello) or security key.",
+  "Sign-in with Passkey is currently disabled for this team.": "Sign-in with Passkey is currently disabled for this team.",
+  "Enable for all users in Settings -> Authentication.": "Enable for all users in Settings -> Authentication.",
+  "Contact a workspace admin to enable it.": "Contact a workspace admin to enable it.",
+  "You don't have any passkeys yet.": "You don't have any passkeys yet.",
   "Add to Slack": "Legg til i Slack",
   "document published": "dokument publisert",
   "document updated": "dokument oppdatert",
